updated endpoints.yml for integration with GUI

--- a/endpoints.yml
+++ b/endpoints.yml
@@ -6,6 +6,8 @@
 #models:
 #  url: http://my-server.com/models/default_core@latest
 #  wait_time_between_pulls:  10   # [optional](default: 100)
+rest:
+#pass
 
 # Server which runs your custom actions.
 # https://rasa.com/docs/rasa/custom-actions
