--- a/credentials.yml
+++ b/credentials.yml
@@ -16,7 +16,10 @@ rest:
 #  slack_token: "<your slack token>"
 #  slack_channel: "<the slack channel>"
 #  slack_signing_secret: "<your slack signing secret>"
-
+socketio:
+ user_message_evt: user_uttered
+ bot_message_evt: bot_uttered
+ session_persistence: true
 #socketio:
 #  user_message_evt: <event name for user message>
 #  bot_message_evt: <event name for bot messages>
